--- a/index.html
+++ b/index.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>2diana4</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dz1</title>
 </head>
+
 <body>
-    <ol>
-        <li>first</li>
-        <li>second</li>
-        <li>third</li>
-    </ol>
-    <ul>
-        <li>first</li>
-        <li>second</li>
-        <li>third</li>
-    </ul>
     <div>
-        <img src="./img/Без названия1234567.jpg" alt="">
-        <h3>love is poop</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae rem assumenda reprehenderit est nostrum consequatur, fuga officia similique distinctio voluptatibus veniam neque fugit eligendi porro aperiam ipsa eos ullam asperiores!</p>
-        <a href="https://rt.pornhub.com/">pornhub</a>
+        <ul>
+            <li>lifestyle</li>
+            <li>photodiary</li>
+            <li>music</li>
+            <li>travel</li>
+        </ul>
+        <div>
+            <div>
+                <img src="./img/1.png" alt="">
+
+                <span>
+                    lifestyle
+                </span>
+                <h3> more than just a music festival</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nesciunt tenetur
+                    laboriosam officiis enim distinctio possimus adipisci id
+                    totam facere saepe, voluptate dignissimos consequuntur cum ratione nostrum necessitatibus at esse?
+                </p>
+            </div>
+            <div>
+                <img src="./img/2.png" alt="">
+                <span>
+                    lifestyle
+                </span>
+                <h3>Life tastes better with coffee</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi sit optio voluptas vero. 
+                    Atque ab ipsam at, ratione omnis delectus natus explicabo 
+                    optio dolore sit eum aperiam eligendi accusamus veniam!
+                </p>
+            </div>
+            <div>
+                <img src="./img/3.png" alt="">
+
+                <span>
+                    photodiary
+                </span>
+                <h3>American dream</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nesciunt tenetur
+                    laboriosam officiis enim distinctio possimus adipisci id
+                    totam facere saepe, voluptate dignissimos consequuntur cum ratione nostrum necessitatibus at esse?
+                </p>
+            </div>
+            <div> <img src="./img/4.png" alt="">
+
+                <span>
+                    photodiary
+                </span>
+                <h3>A day exploring the Alps</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nesciunt tenetur
+                    laboriosam officiis enim distinctio possimus adipisci id
+                    totam facere saepe, voluptate dignissimos consequuntur cum ratione nostrum necessitatibus at esse?
+                </p>
+            </div>
     </div>
     <div>
-        <ol>
-            <li>
-                <h2>hello</h2>
-                <p>hello hello hello</p>
-            </li>
-            <li>
-                <h2>hello</h2>
-                <p>hello hello hello</p>
-            </li>
-            <li>
-                <h2>hello</h2>
-                <p>hello hello hello</p>
-            </li>
-        </ol>
+        <button>
+            load more
+            </button>
     </div>
 </body>
+
 </html>
